# zspin

./: README.md  ZS-F1_verify_v1_0.py  ZS-F2_verify_v1_0.py  ZS-F3_verify_v1_0.py  ZS-Q1_v1_0_verification.py  ZS-Q2_v1_0_verification.py  ZS-Q3_v1_0_verification.py  ZS-Q6_v1_0_verification.py  ZS_A1_v1_0_verification.py  ZS_A2_v1_0_verification.py  ZS_A4_v1_0_verification.py  ZS_M3_Verification_Suite_v1_0.py  ZS_QC_verify_v1_0.py  ZS_QH_verify_v1_0.py  ZS_QS_verify_v1_0.py  ZS_S1_verify_v1_0.py  ZS_S2_verify_v1_0.py  ZS_S3_verify_v1_0.py  ZS_S4_verify_v1_0.py  ZS_S5_verify_v1_0.py  ZS_S6_verify_v1_0.py  ZS_T2_verification_v1_0.py  ZS_T3_verification_v1_0.py  ZS_U2_v1_0_verification.py  ZS_U3_v1_0_verification.py  ZS_U4_v1_0_verification.py  ZS_U5_v1_0_verification.py  ~$README.md
zsim_v1_0/: CHANGELOG.md  README.md  TREE.txt  pyproject.toml  requirements.txt  setup_windows.bat  setup_zsim.py
zsim_v1_0/cobaya_f32/: README_F32_12.md  camb_compare.py  verify_tier09.py  zspin_bare_mcmc.yaml  zspin_grid_2d.yaml  zspin_local_test.yaml  zspin_mcmc_planck.yaml
zsim_v1_0/configs/: base.yaml  (+2 more)
zsim_v6_1/: 01_Foundations_ZS-F0_F1_F2_F3_F4_F5.docx  02_Math_Spine_ZS-M1_M2_M3_M4_M5_M6_M7_M8.docx  03_Standard_Model_ZS-S1_S2_S3_S4_S5_S6.docx  04_Early_Universe_ZS-U1_U2_U3_U4_U5_U6_U7_U8.docx  05_Astrophysics_ZS-A1_A2_A3_A4_A5_A6.docx  06_Quantum Mechanics_ZS-Q1_Q2_Q3_Q4_Q5_Q6_Q7.docx  07_Quantum Computer_ZS-QH_QS_QC.docx  08_Translational_ZS-T1_T2_T3.docx  CHANGELOG.md  README.md  TREE.txt  The_Book_Z-Spin_Cosmology_v1_0.docx  pyproject.toml  setup_windows.bat  setup_zsim.py
(+483 files in other folders)
