[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zsim"
version = "1.0.0"
description = "Z-Sim v1.0 — Cosmology + SM Predictions + Production LGT"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Kenny Kang, Jenny Park, Kenny Park"}]
dependencies = [
  "numpy>=1.26",
  "scipy>=1.12",
  "pyyaml>=6.0",
  "matplotlib>=3.8",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["zsim*"]
