[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zsim"
version = "6.1.0"
description = "Z-Sim v6.1 — Cosmology + Production Lattice Gauge Theory"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Kenny Kang, Jenny Park, Kenny Park"}]
dependencies = [
  "numpy>=1.26",
  "scipy>=1.12",
  "pyyaml>=6.0",
  "matplotlib>=3.8",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["zsim*"]
